--- a/index.html
+++ b/index.html
@@ -12,8 +12,12 @@
 </head>
 <body>
     <div class="header">
+        <a href="homepage.html">
         <p id="central">ReceiMIX</p>
-        <img id="logo1" src=".\arquivos\f1-removebg-preview.png">
+        </a>
+        <a href="homepage.html">
+            <img id="logo1" src=".\arquivos\f1-removebg-preview.png">
+        </a>
         <div class="navheader">
             <! --COLOCAR A URL DE LOGIN-->
             <a href="PAGINA DE LOGIN">
