--- a/homepage.html
+++ b/homepage.html
@@ -41,7 +41,7 @@
                     <label>40m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>3 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="strogonoff.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
             <div class="pet">
@@ -55,7 +55,7 @@
                     <label>30m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>3 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="macarronada.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
             <div class="pet">
@@ -69,7 +69,7 @@
                     <label>30m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>4 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="moqueca.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
             <div class="pet">
