--- a/homepage.html
+++ b/homepage.html
@@ -83,7 +83,7 @@
                     <label>30m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>6 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="caldo.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
             <div class="pet">
@@ -97,7 +97,7 @@
                     <label>15m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>4 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="farofa.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
             <div class="pet">
@@ -111,7 +111,7 @@
                     <label>2h30m</label>
                     <img id="relogio" src="./arquivos/usuario.png">
                     <label>6 pessoas</label>
-                    <a href="./formulario/index.html"><button class="acessar">Acessar</button></a>                        
+                    <a href="empada.html"><button class="acessar">Acessar</button></a>                        
                 </div>
             </div>
         </div>
