--- a/macarronada.html
+++ b/macarronada.html
@@ -37,7 +37,7 @@
 
     <div class="conteudo">
             <h1 class="titulo-receita">Macarronada de calabresa</h1>
-            <div class="card">
+            <div class="carde">
             <h1>INGREDIENTES</h1>
             <ul>
                 <li>250 gramas de macarrão tipo talharim (ninho)</li>
@@ -51,7 +51,7 @@
                 <li>folhas frescas de manjericão (a gosto)</li>
             </ul>
         </div>
-        <div class="card">
+        <div class="carde">
             <h1>MODO DE PREPARO</h1>
             <ol>
                 <li>Separe todos os ingredientes necessários para o preparo dessa receita de macarronada de calabresa.</li>
