--- a/strogonoff.html
+++ b/strogonoff.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html">
+        <a href="homepage.html">
             <p id="central">ReceiMIX</p>
         </a>
-        <a href="index.html">
+        <a href="homepage.html">
             <img id="logo1" src=".\arquivos\f1-removebg-preview.png">
         </a>
         <div class="navheader">
