--- a/macarronada.html
+++ b/macarronada.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ReceiMIX - Receitas</title>
-    <link rel="stylesheet" href="style2.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="header">
-        <a href="index.html">
+        <a href="homepage.html">
             <p id="central">ReceiMIX</p>
         </a>
-        <a href="index.html">
+        <a href="homepage.html">
             <img id="logo1" src=".\arquivos\f1-removebg-preview.png">
         </a>
         <div class="navheader">
