--- a/macarronada.html
+++ b/macarronada.html
@@ -16,7 +16,7 @@
         <a href="homepage.html">
             <p id="central">ReceiMIX</p>
         </a>
-        <a href="homepage.html">
+        <a href="index.html">
             <img id="logo1" src=".\arquivos\f1-removebg-preview.png">
         </a>
         <div class="navheader">
