--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <input type="radio" name="radiobt" id="radio4">
 
             <div class="slide first">
-                <a href="strogonoff.html"><img src="/arquivos/strogonoff.jpeg" alt="Imagem 1"></a>
+                <a href="strogonoff.html"><img src="arquivos/strogonoff.jpeg" alt="Imagem 1"></a>
             </div>
             <div class="slide">
                 <a href="macarronada.html"><img src="arquivos/macarronada_de_calabresa.jpg" alt="Imagem 2"></a>
