--- a/macarronada.html
+++ b/macarronada.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html">
+        <a href="homepage.html">
             <p id="central">ReceiMIX</p>
         </a>
         <a href="index.html">
