--- a/index.html
+++ b/index.html
@@ -221,7 +221,13 @@
             div.appendChild(tempo);
             div.appendChild(serve);
             div.appendChild(pessoas);
-
+            link.appendChild(img);
+            link.appendChild(titulo);
+            link.appendChild(descricao);
+            link.appendChild(relogio);
+            link.appendChild(tempo);
+            link.appendChild(serve);
+            link.appendChild(pessoas);
             content.appendChild(div);
         }
 
