--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             </div>
         </div>
         
-        <h1>Receitas Salgadas</h1>
-        <div class="cont" id="receitas-salgadas">
+        <h1 class="tipo-rec">Receitas Salgadas</h1>
+        <div class="cont1" id="receitas-salgadas">
             <!-- Os cards das receitas serão adicionados aqui através do JavaScript -->
         </div>
-        <h1>Receitas Doces</h1>
-        <div class="cont" id="receitas-doces">
+        <h1 class="tipo-rec2">Receitas Doces</h1>
+        <div class="cont2" id="receitas-doces">
             <!-- Os cards das receitas serão adicionados aqui através do JavaScript -->
         </div>
     </section>
