--- a/farofa.html
+++ b/farofa.html
@@ -50,6 +50,7 @@
             </ul>
         </div>
         <div class="card">
+            <button class="curtir" onclick="curtirReceita('nome-da-receita')">Curtir</button>
             <h1>MODO DE PREPARO</h1>
             <ol>
                 <li>Comece separando todos os ingredientes da farofa de banana com bacon, esse passo é extremamente importante para os iniciantes na cozinha, pois permitirá que você não esqueça de adicionar nenhum ingrediente à receita. Corte a banana em rodelas, e o bacon e a cebola em quadradinhos pequenos, para ficar mais fácil de fritar.</li>
@@ -58,7 +59,7 @@
                 <li>Com o bacon e a cebola já fritos, retire da panela e reserve. Usando a mesma panela, acrescente o restante da manteiga e as bananas picadas e deixe fritar alguns minutos. Com as bananas já fritas, acrescente novamente o bacon e a farinha de mandioca. Misture bem e por último acrescente a cebolinha e a salsinha e acerte o sal.</li>
                 <li>A sua farofa de banana com bacon está pronta agora é só servir</li>
             </ol>
-            <a href="#" class="botao">Adicionar as minhas receitas</a>
+            
         </div>
     </div>
     <div class="compartilhar">
