--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <script type="text/javascript" defer src="scripe.js"></script>
+
 </head>
 <body>
     <header>
         <div class="header">
             <p id="central">ReceiMIX</p>
             <img id="logo1" src="./arquivos/f1-removebg-preview.png">
+            <form id="inputsearch">
+                <input type="search" id="search" placeholder="Procure uma receita" autocomplete="off" required>
+                <input type="image" disabled id="botaosearch" src="./arquivos/LUPA2.png" alt="Enviar">
+            </form>
             <nav>
-                <div class="navheader">
-                    <!-- COLOCAR A URL DE LOGIN -->
+                <div id="minhasreceitas">
+                    <!--Vai ser colocado aqui as minhas receitas-->
+                </div>
+                <div id="remover">
                     <a href="login.html">
                         <img id="login" src="./arquivos/login.png">
                         <p id="botaologin">login</p>
                     </a>
-                    <form id="inputsearch">
-                        <input type="search" id="search" placeholder="Procure uma receita" autocomplete="off" required>
-                        <input type="image" disabled id="botaosearch" src="./arquivos/LUPA2.png" alt="Enviar">
-                    </form>
                 </div>
             <nav>
     </header>
