--- a/MinhasReceitas.html
+++ b/MinhasReceitas.html
@@ -10,8 +10,8 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
+        <script type="text/javascript" defer src="viewReceitas.js"></script>
         <script type="text/javascript" defer src="scripeMinhasreceitas.js"></script>
-        
     </head>
 <body>
     <header>
@@ -30,7 +30,7 @@
                 </div>
             <nav>
     </header>
-    <section>
+    <section id="receitasView">
         <h1>Minhas Receitas</h1>
         <div id="minhas-receitas-container">
             <!-- Aqui serão adicionadas as receitas curtidas -->
@@ -42,10 +42,11 @@
         <div class="cont2" id="receitas-doces">
             <!-- Os cards das receitas serão adicionados aqui através do JavaScript -->
         </div>
-    <footer>
-        <div class="footer">
-            <p>Copyright - <a href="#" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
-        </div>
-    </footer>
+    </section>
+        <footer class="footer2">
+            <div>
+                <p id="footernames">Copyright<sup>&copy</sup> - <a href="#" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+            </div>
+        </footer>
 </body>
 </html>
