--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         
     </section>
     <footer>
-        <div class="footer">
+        <div>
             <p id="footernames">Copyright<sup>&copy</sup> - <a href="#" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
         </div>
     </footer>
