--- a/MinhasReceitas.html
+++ b/MinhasReceitas.html
@@ -16,8 +16,8 @@
 <body>
     <header>
         <div class="header">
-            <p id="central">ReceiMIX</p>
-            <img id="logo1" src="./arquivos/f1-removebg-preview.png">
+            <a href="index.html"><p id="central">ReceiMIX</p></a>
+            <a href="index.html"><img id="logo1" src="./arquivos/f1-removebg-preview.png"></a>
             <nav>
                 <div id="minhasreceitas">
                     <!--Vai ser colocado aqui as minhas receitas-->
@@ -45,7 +45,7 @@
     </section>
         <footer class="footer2">
             <div>
-                <p id="footernames">Copyright<sup>&copy</sup> - <a href="#" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+                <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
             </div>
         </footer>
 </body>
