--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <body>
     <header>
         <div class="header">
-            <p id="central">ReceiMIX</p>
-            <img id="logo1" src="./arquivos/f1-removebg-preview.png">
+            <a href="index.html"><p id="central">ReceiMIX</p></a>
+            <a href="index.html"><img id="logo1" src="./arquivos/f1-removebg-preview.png"></a>
             <form id="inputsearch">
                 <input type="search" id="search" placeholder="Procure uma receita" autocomplete="off" required>
         
@@ -85,7 +85,7 @@
     </section>
     <footer>
         <div>
-            <p id="footernames">Copyright<sup>&copy</sup> - <a href="#" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+            <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
         </div>
     </footer>
 </body>
