--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <script type="text/javascript" defer src="viewReceitas.js"></script>
-    <script type="text/javascript" defer src="scripe.js"></script>
+    <script type="text/javascript" defer src="script.js"></script>
 
 </head>
 <body>
