--- a/MinhasReceitas.html
+++ b/MinhasReceitas.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ReceiMIX - Receitas</title>
         <link rel="stylesheet" href="style.css">
+       
         <link rel="stylesheet" href="stylemr.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,10 +44,22 @@
             <!-- Os cards das receitas serão adicionados aqui através do JavaScript -->
         </div>
     </section>
-        <footer class="footer2">
-            <div>
-                <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+    <footer>
+        <div>
+            <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+                <div class="compartilhar">
+                <p id="compartilhe">Compartilhe:</p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://rcmaione.github.io/ReceiMIX/">
+                    <img id="imgshare1" src="https://ayltoninacio.com.br/img/s/18w50.jpg" alt="Compartilhe no Facebook">
+                </a>
+                <a href="https://api.whatsapp.com/send?text=https://rcmaione.github.io/ReceiMIX/">
+                    <img id="imgshare2" width="25" height="25" src="https://ayltoninacio.com.br/img/s/20w50.jpg" alt="Compartilhe no WhatsApp">
+                </a>
+                <a href="javascript:void(0)" onclick="share()">
+                    <img id="imgshare3" src="https://ayltoninacio.com.br/img/s/21w50.jpg" alt="Compartilhe">
+                </a>
             </div>
-        </footer>
+        </div>
+    </footer>
 </body>
 </html>
