--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
     <footer>
         <div>
             <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+                <div class="compartilhar">
+                <p id="compartilhe">Compartilhe:</p>
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://rcmaione.github.io/ReceiMIX/">
+                    <img id="imgshare1" src="https://ayltoninacio.com.br/img/s/18w50.jpg" alt="Compartilhe no Facebook">
+                </a>
+                <a href="https://api.whatsapp.com/send?text=https://rcmaione.github.io/ReceiMIX/">
+                    <img id="imgshare2" width="25" height="25" src="https://ayltoninacio.com.br/img/s/20w50.jpg" alt="Compartilhe no WhatsApp">
+                </a>
+                <a href="javascript:void(0)" onclick="share()">
+                    <img id="imgshare3" src="https://ayltoninacio.com.br/img/s/21w50.jpg" alt="Compartilhe">
+                </a>
+            </div>
         </div>
     </footer>
 </body>
