--- a/MinhasReceitas.html
+++ b/MinhasReceitas.html
@@ -5,8 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ReceiMIX - Receitas</title>
+        <link rel="icon" href="./arquivos/f1-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./arquivos/f1-removebg-preview.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
-       
         <link rel="stylesheet" href="stylemr.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +47,7 @@
     </section>
     <footer>
         <div>
-            <p id="footernames">Copyright<sup>&copy</sup> - <a href="homepage.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
+            <p id="footernames">Copyright<sup>&copy</sup> - <a href="index.html" class="link-footer">ReceiMIX</a> 2023 - Projeto para fins didáticos</p>
                 <div class="compartilhar">
                 <p id="compartilhe">Compartilhe:</p>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=https://rcmaione.github.io/ReceiMIX/">
