--- a/MinhasReceitas.html
+++ b/MinhasReceitas.html
@@ -5,8 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ReceiMIX - Receitas</title>
-        <link rel="icon" href="./arquivos/f1-removebg-preview.png" type="image/x-icon">
-    <link rel="shortcut icon" href="./arquivos/f1-removebg-preview.png" type="image/x-icon">
+        <link rel="icon" href="arquivos/f1-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="arquivos/f1-removebg-preview.png" type="image/x-icon">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="stylemr.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
